@@ -1,4 +1,8 @@
 
+2018-10-21  Simon Sobisch <simonsobisch@gnu.org>
+
+	* common.h: exchanged system-specific PTRFILLER define for FCD3 by union
+
 2018-09-30  Simon Sobisch <simonsobisch@gnu.org>
 
 	* fileio.c [HAVE_FCNTL]: minor code cleanup
